--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "confidence": "^3.0.0",
     "express": "^4.13.4",
     "hapi": "^13.3.0",
+    "inert": "^3.2.0",
     "jsonwebtoken": "^5.7.0",
     "underscore": "^1.8.3",
     "wreck": "^7.1.0"
@@ -16,6 +17,7 @@
   "scripts": {
     "auth": "nodemon --watch auth ./auth/index.js",
     "clubs": "nodemon --watch clubs ./clubs/index.js",
+    "web": "nodemon --watch web ./web/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maxime Morin <maxime.morin2@gmail.com>",
